# tempo

./: .gitignore  .mcp.json  CLAUDE.md  README.md  README.mdgit  package.json  pnpm-lock.yaml
.agents/rules/: datetime-ms-source-of-truth.mdc  ts-jsdoc-conventions.mdc
.claude/rules/: readme-sync-app-web-service.mdc
.cursor/rules/: figma-design-system.mdc  figma-links-ingest.mdc
app/: .env.example  App.tsx  README.md  app.config.ts  app.json  index.ts  jest.config.js  package.json
app/languages/: en.json  (+1 more)
docs/: app-schedule-local-storage.md
scripts/: clean-node-modules.sh  dev-iterm.sh  start-dev-terminals.sh  sync-dev-lan-env.sh
service/: pyproject.toml
service/app/: dependencies.py  main.py  schemas.py
service/app/core/: config.py  exceptions.py  middleware.py  schemas.py
service/app/domains/ai/: __init__.py  prompt_templates.py  router.py  schemas.py  service.py  time_parser.py  web_search.py
service/app/domains/auth/: __init__.py  models.py  router.py  schemas.py  service.py
service/app/domains/schedule/: __init__.py  router.py  schemas.py  service.py
service/app/routers/: ai.py  schedule.py
service/app/services/: ai_orchestrator.py  mock_parse.py  prompt_templates.py
service/tests/: test_ai_orchestrator_mock.py  test_ai_react.py  test_time_parser.py  test_web_search.py
service/tests/domains/ai/: test_orchestrator.py  test_react.py  test_time_parser.py  test_web_search.py
service/tests/domains/auth/: test_service.py
service/tests/routers/: test_schedule.py
web/: .env.development  README.md  index.html  package.json  vite.config.ts
(+113 files in other folders)
